test/unstable-keyword/module/unstable_module.set.good
unstable_module.chpl:2: warning: the amodule is unstable
unstable_module.chpl:4: error: string
