test/unstable-keyword/module/unstable_module.chpl

use amodule;

compilerError(amoduleVar.type:string);
